--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "github.com/go-chi/chi"
   version = "4.0.2"
+
+[[constraint]]
+  name = "github.com/go-chi/render"
+  version = "1.0.1"
